--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@ckeditor/strapi-plugin-ckeditor": "^1.0.2",
+    "@ckeditor/strapi-plugin-ckeditor": "1.0.2",
     "@strapi/plugin-cloud": "5.1.0",
     "@strapi/plugin-users-permissions": "5.1.0",
     "@strapi/provider-upload-aws-s3": "^5.1.0",
